<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.marta.farmaceutycznypomocnik.Opiekun_3_dodaj_lek">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nazwa_leku"
            android:textSize="25sp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:gravity="left"
            android:textStyle="bold"
            android:textColor="@color/czarny" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nazwa_leku"
            android:layout_gravity="center_horizontal"
            android:hint="@string/nazwa_leku_hint"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dawka_leku"
            android:textSize="25sp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:gravity="left"
            android:textStyle="bold"
            android:textColor="@color/czarny" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dawka_leku"
            android:layout_gravity="center_horizontal"
            android:hint="@string/dawka_leku_hint"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dodatkowe_info"
            android:textSize="25sp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:gravity="left"
            android:textStyle="bold"
            android:textColor="@color/czarny" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dodatkowe_info"
            android:layout_gravity="center_horizontal"
            android:hint="@string/dodatkowe_info_hint"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dni_tygodnia"
            android:textSize="25sp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:gravity="left"
            android:textStyle="bold"
            android:textColor="@color/czarny" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dni_tyg"
            android:layout_gravity="center_horizontal"
            android:hint="@string/dni_tyg_hint"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/godzina"
            android:textSize="25sp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:gravity="left"
            android:textStyle="bold"
            android:textColor="@color/czarny" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:ems="10"
            android:id="@+id/godzina"
            android:layout_gravity="center_horizontal"
            android:hint="@string/godziny_hint"/>

        <Button
            android:id="@+id/zapiszButton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/zapisz_button"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:padding="10dp"
            android:gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="30dp"
            android:background="@color/zapisz_kolor"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="left">

            <Button
                android:id="@+id/anuluj_button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/anuluj_button"
                android:textSize="30sp"
                android:layout_gravity="left"
                android:padding="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="10dp"
                android:background="@color/wstecz_kolor"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
