<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".Opiekun_2_nowy_pacjent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/opiekun2_text3"
        android:textSize="25sp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:gravity="left"
        android:textColor="@color/czarny" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/imie"
            android:textSize="30sp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="left"
            android:textStyle="bold"
            android:textColor="@color/czarny" />

        <EditText
            android:id="@+id/imie_pacjenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:hint="@string/imie_pacjenta_hint"/>

    </LinearLayout>

    <Button
        android:id="@+id/dodajlek_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dodaj_lek_button"
        android:textSize="30sp"
        android:padding="10dp"
        android:layout_margin="25dp"
        android:layout_gravity="center"
        android:background="@color/dodaj_kolor"
        android:textStyle="bold"
        android:onClick="dodajlekClick"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="left">

        <Button
            android:id="@+id/wstecz_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/wstecz_button"
            android:textSize="30sp"
            android:layout_gravity="left"
            android:padding="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="30dp"
            android:background="@color/wstecz_kolor"
            android:textStyle="bold"
            android:onClick="wsteczClick"/>

        <Button
            android:id="@+id/zapisz_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/zapisz_button"
            android:textSize="30sp"
            android:layout_gravity="left"
            android:padding="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="5dp"
            android:background="@color/zapisz_kolor"
            android:textStyle="bold"
            android:onClick="zapiszClick"/>
    </LinearLayout>
</LinearLayout>
