<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.marta.farmaceutycznypomocnik.Opiekun_1_login">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="@color/czarny"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:text="WPROWADŹ HASŁO"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/haslo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_margin="10dp"
        android:textSize="20sp"
        android:hint="@string/haslo1_hint"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/przypomnij_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_margin="15dp"
        android:text="@string/przypomnij_haslo_button"
        android:background="@color/przypomnij_kolor"
        android:onClick="przypomnijClick"/>

    <Button
        android:id="@+id/zaloguj_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:background="@color/zaloguj_kolor"
        android:onClick="loginClick"/>

    <Button
        android:id="@+id/wstecz_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_margin="10dp"
        android:text="@string/wstecz_button"
        android:textColor="@color/czarny"
        android:textSize="30sp"
        android:textStyle="bold"
        android:background="@color/wstecz_kolor"
        android:onClick="wsteczClick" />

</LinearLayout>
