<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.marta.farmaceutycznypomocnik.Start">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="Witaj!"
        android:textSize="30sp"
        android:textColor="@color/czarny"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="Wybierz użytkownika:"
        android:textSize="30sp"
        android:textColor="@color/czarny"/>

    <Button
        android:id="@+id/pacjent_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10sp"
        android:text="@string/pacjent_button"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_margin="25dp"
        android:background="@color/pacjent_kolor"
        android:onClick="pacjentClick"
        />

    <Button
        android:id="@+id/opiekun_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10sp"
        android:text="@string/opiekun_button"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_margin="25dp"
        android:background="@color/opiekun_kolor"
        android:onClick="opiekunClick"/>

    <Button
        android:id="@+id/zamknij_button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:padding="10sp"
        android:text="@string/zamknij_button"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        android:background="@color/zamknij_color"
        android:onClick="zamknijClick"/>

</LinearLayout>
