<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.marta.farmaceutycznypomocnik.Opiekun_4_lista_lekow">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pacjent"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:gravity="left"
            android:textColor="@color/czarny" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="tu bedzie imię"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/czarny"/>

    </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/opiekun2_text4"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:textColor="@color/czarny" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ListView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/lista_lekow"
                    android:layout_gravity="center_horizontal"
                    android:minHeight="50dp"/>

            </LinearLayout>

        </ScrollView>

        <Button
            android:id="@+id/dodajlek_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dodaj_next_lek_button"
            android:background="@color/dodaj_kolor"
            android:textColor="@color/czarny"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_margin="10dp"
            android:onClick="dodajlekClick"/>

        <Button
            android:id="@+id/wstecz_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/wstecz_button"
            android:textColor="@color/czarny"
            android:textSize="30sp"
            android:textStyle="bold"
            android:background="@color/wstecz_kolor"
            android:layout_gravity="left"
            android:onClick="wsteczClick"/>

    </LinearLayout>
</ScrollView>
