<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.marta.farmaceutycznypomocnik.Opiekun_1_zalogowany">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lista_pacjentow"
        android:textSize="35sp"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textColor="@color/czarny"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="25sp"
        android:text="imię pacjenta 1"
        android:onClick="pacjent1Click"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="25sp"
        android:text="imię pacjenta 2"
        android:onClick="pacjent2Click"/>

    //tutaj byłaby lista pacjentów, których dodał sobie opiekun
    //każdy opiekun przecież może "obsługiwać" nie tylko jedną osobę
    //jak kliknie na odpowiednie imię to będzie lista leków tej osoby

        <Button
            android:id="@+id/nowy_pacjent_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textColor="@color/czarny"
            android:textStyle="bold"
            android:text="@string/nowy_pacjent"
            android:layout_margin="10dp"
            android:background="@color/przypomnij_kolor"
            android:onClick="nowypacjentClick"/>

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/wstecz_button"
            android:textSize="30sp"
            android:layout_gravity="left"
            android:padding="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="10dp"
            android:background="@color/wstecz_kolor"
            android:textStyle="bold"
            android:onClick="wsteczClick" />

    </LinearLayout>
</ScrollView>
